--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="prymery.html"><b>мои лучшие работы</b></a>
+        <a class="link-nav" href="primery.html"><b>мои лучшие работы</b></a>
         <a class="link-nav" href="pin.html"><b>полезная информация</b></a>
         <a class="link-nav" href="abme.html"><b>полезная информация</b></a>
       </nav>
