--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav>
         <a class="link-nav" href="primery.html"><b>мои лучшие работы</b></a>
         <a class="link-nav" href="pin.html"><b>полезная информация</b></a>
-        <a class="link-nav" href="abme.html"><b>полезная информация</b></a>
+        <a class="link-nav" href="abme.html"><b>обо мне</b></a>
       </nav>
       <h1>Web-sites<br/> developer</h1>
       <p>Pазметка и стилизация</p>
